--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-#spring.thymeleaf.cache=false
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.thymeleaf.cache=false
+spring.jpa.hibernate.ddl-auto=create-drop
